--- a/setimemt_analysis_imdb.ipynb
+++ b/setimemt_analysis_imdb.ipynb
@@ -268,7 +268,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -282,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
